--- a/Tema3JDBC/.classpath
+++ b/Tema3JDBC/.classpath
@@ -7,5 +7,6 @@
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="C:/Users/manuel.garfia/Downloads/mysql-connector-j-9.4.0.zip"/>
+	<classpathentry kind="lib" path="C:/Users/manuel.garfia/Downloads/mysql-connector-j-9.4.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
